--- a/index.html
+++ b/index.html
@@ -14,26 +14,28 @@
       <div id="teksti1">
         <p>
         ‎‎‎‏‏‎ ‎‏‏‎ ‏‏‎ ‎‎‎Lisää merkintä
+        <div class="huomio"></div>
             <p>
               <text>Nimi:</text>
               <p>
               <input class="1box" type="text" id="kenttä">
             <p>
-              <text>Tieto :</text>
+              <text>Tieto:</text>
               <p>
               <input class="1box" type="text" id="kenttä">
               <p>
             <button id = nappi>Lisää</button>
-            <h1 id = h11>.</h1>
             <p>
         </div>
+        <div id="checkboxit">
+          <p>
         <text id="suoritettavat"></text>
           <p>
           Suoritettavat:
           </text>
           <p>
             <input type = "checkbox" id= "html" onclick="isChecked()">
-            <text id = "viest">HTML</text>
+            <text id = "viesti1">HTML</text>
             <p>
             <input type = "checkbox" id= "css" onclick="isChecked()">
             <text id = "viesti2">CSS</text>
@@ -42,7 +44,10 @@
             <text id = "viesti3">JavaScript</text>
             <p>
             <input type = "checkbox" id= "cd" onclick="isChecked()">
-            <text id = "viesti4">CS/CD</text>
+            <text id = "viesti4">CI/CD</text>
+            <p>
+              </div>
+              <h1 id="ggg"></h1>
     <script src="script.js"></script>
   </body>
 </html>
